# acgme-case-parser

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  USER_GUIDE.md  WEB_INTEGRATION_PLAN.md  batch_process.py  biome.json  codecov.yaml  debug_categorization.py  list_attendings.py  main.py  mise.toml  package.json  pyproject.toml  ruff.toml  sample.html  sort_logs.py  stylelint.config.js
.claude/hooks/: post-tool-call.py
.github/workflows/: chrome-extension-release.yml  python-tests.yml
backlog/: config.yml
chrome-extension/: ARCHITECTURE.md  BUILD.md  README.md  biome.json  build.js  content.css  content.js  manifest.json  package.json  popup.css  popup.html  popup.js  tailwind.config.js  xlsx.min.js
chrome-extension/icons/: ICONS_README.md
ml_training/: README.md  airway_review.py  auto_train.py  batch_prepare.py  evaluate.py  train_optimized.py  utils.py  workbench.py
src/case_parser/: __init__.py  acgme_mappings.py  cli.py  csv_io.py  domain.py  enhanced_processor.py  exceptions.py  extractors.py  io.py  logging_config.py  models.py  processor.py  processors.py  py.typed  standalone_exports.py  types.py  utils.py  (+2 more)
tests/: test_batch_process.py  test_block_site_patterns.py  test_categorization.py  test_cli.py  test_csv_io.py  test_domain.py  test_enhanced_extractors.py  test_enhanced_processor.py  test_io.py  test_list_attendings.py  test_ml_airway_review.py  test_ml_auto_train.py  test_ml_batch_prepare.py  test_ml_config.py  test_ml_evaluate.py  test_ml_features.py  test_ml_hybrid.py  test_ml_inputs.py  test_ml_predictor.py  test_ml_workbench.py  test_sort_logs.py  test_validation.py
(+27 files in other folders)
